app/styles/information.scss
@import '_custom_vars';

/* information file is for both food and restaurant view */

$icon-height: 45px;

.main-div {
  line-height: 20px;
}

.heading {
  padding: 10px 0px;
  font-weight: 400;
  text-align: center;
}

.main-photo {

  position: relative;

  img {
    width: 100%;
  }

  .overlay {
    position: absolute;
    top: 0px;
    right: 0px;
  }

  .share-button {
    margin-left: -4px;
    margin-top: 4px;
    width: 31px;
    vertical-align: text-bottom;
  }

}

.photo-bar {
  background: rgba(0,0,0,0.5);
  width: 100%;
  padding: 3px;
  color: white;
  position: absolute;
  bottom: 0px;

  img {
    width: 35px;
    margin: 2px;
    border-radius: 30px;
  }

  .num {
    font-weight: 400;
  }

  .more {
    display: inline-block;
    float: right;

    i {
      font-size: 20px;
      line-height: 37px;
    }

    .fa-thumbs-o-up, .fa-users {
      margin-right: 5px;
    }
  }

}

.circle {
  height: $icon-height;
  width: $icon-height;
  line-height: $icon-height + 5px;
  background: $base-color-transparent;
  padding: 3px;
  margin: 5px;
  border-radius: 1000px;
  color: white;
  text-align: center;
}

.photo-bar.buttons-overlay {
  text-align: right;
  padding: 3px;
}

.get-there-button {
  display: inline-block;
}

.follow-button {
  display: inline-block;
}

.photo-bar.followed-by {
  position: relative;
  bottom: auto;
  background: white;
  color: $darkgrey;

  .more {

  }
}

.main-photo.restaurant {
  height: 250px;
  overflow: hidden;
}

.title {

  padding: $main-padding;
  text-align: center;
  background: $whitegrey;

  .food-name, .restaurant-name {
    font-weight: 400;
    font-size: 18px;
    margin: 10px 0px;
  }

  .restaurant .name {
    color: $base-color;
  }

}

.description {

  padding: $main-padding;
  background: $whitegrey;

}

.map {
  background: $whitegrey;
}

.icons {

  text-align: center;

  .food-icon {

    display: inline-block;
    width: 23.5%;
    padding: 0px 3px;
    height: 80px;
    vertical-align: top;

    img {
      width: 60%;
      height: 40px;
    }

    .text {

      font-size: 13px;
      line-height: 14px;
      height: 31px;
      vertical-align: middle;
      display: table-cell;

    }

  }

}

.cuisine, .dietary {

  padding: $main-padding;
  text-align: center;

}

.menu {

  padding: $main-padding;
  background: $whitegrey;

}

.deals {

  padding: $main-padding;

  .item {

    margin: 7px 0px;

    .photo {

      width: 20%;
      display: inline-block;
      float: left;

      img {
        border-radius: $radius;
      }
    }

    .info {
      width: 80%;
      height: 40px;
      padding: 8px;
      display: inline-block;
    }

    .info:after{
      content: '\f105';
      font-family: 'FontAwesome';
      line-height: 40px;
      float: right;
    }

  }

}

.reviews {

  padding: $main-padding;
  background: $whitegrey;

}

.amenities {
  padding: $main-padding;
}

#modal-menu-item {

  .photo {

    position: relative;

    .controls {
      display: block;
      height: 100%;
      width: 100%;

      .wrapper {
        position: absolute;
        margin: auto 2px;
        top: 0px;
        bottom: 0px;
        height: 35px;
        width: 35px;
        line-height: 35px;
        font-size: 35x;
        background: $base-color-transparent;
        text-align: center;
        color: white;
        border-radius: 100px;
        padding: 0px 10px;
        opacity: 0.9;
      }

      .wrapper.left, {
        text-align: left;
        left: 0px;
      }

      .wrapper.right {
        text-align: right;
        right: 0px;
      }

    }
  }

  .info {
    padding: $main-padding;
    font-size: 18px;
  }

  .name {
    float: left;
    font-weight: 400;
    width: 85%;
  }

  .price {
    float: right;
    width: 15%;
  }

}

